# model-evaluation

./: .gitignore  Makefile  README.md  detection.py  main.py  model_evaluation.py  pyproject.toml  test_model.py  visualization.py
data/gt/: 1.csv  2.csv  3.csv  4.csv
detection/core/: interfaces.py  registry.py
detection/eval/benchmarking/: __init__.py  speed.py
detection/eval/metrics/: __init__.py  evaluation.py
detection/eval/pipeline/: config.py  data_loader.py  inference.py  metrics.py  pipeline.py  reporter.py  visualizer.py
detection/eval/reporting/: __init__.py  console_reporter.py  json_reporter.py  markdown_reporter.py  multi_model_reporter.py
detection/eval/visualization/: __init__.py  detection.py  plots.py
detection/evaluation/: __init__.py  evaluator.py  metrics.py  report.py  visualization.py
detection/models/detr/: __init__.py  rtdetr.py  rtdetrv2.py
detection/models/foundation/: __init__.py  grounding_dino.py
detection/models/huggingface/: rtdetr.py
detection/models/ultralytics/: base.py  constants.py  rtdetr.py  sam.py  yolo.py
detection_models/: base_models.py  detection_model.py  models.py  registry.py  yolov8m_pose.py
detection_models/detr/: __init__.py  rtdetrv2.py
detection_models/evaluation/: __init__.py  evaluator.py  metrics.py  visualization.py
detection_models/foundation_models/: __init__.py  grounding_dino.py
detection_models/models/detr/: __init__.py  rtdetrv2.py
detection_models/models/foundation/: grounding_dino.py
detection_models/models/ultralytics/: rtdetr.py  sam.py  yolo.py
detection_models/ultralytics/: __init__.py  base.py  constants.py  rtdetr.py  sam.py  yolo.py
scripts/: evaluate.py  reduce_fps.py  test.py  visualize_gt.py
testdata/evanette001/gt/: 001.csv  002.csv  003.csv
