[project]
name = "model-evaluation"
version = "0.1.0"
dependencies = [
    "markdown>=3.7",
    "mypy>=1.15.0",
    "numpy==1.26.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250308",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.1",
    "types-markdown>=3.7.0.20250322",
    "types-tqdm>=4.67.0.20250404",
    "ultralytics>=8.3.105",
]

[tool.ruff]
indent-width = 2
lint.select = [
  "E", "F", "W", "PIE", "C4", "ISC", "A", "B",
  "NPY", # numpy
  "UP",  # pyupgrade
  "I",   # import ordering
  "TRY203", "TRY400", "TRY401", # try/excepts
  "RUF008", "RUF100",
  "TID251",
  "PLR1704",
]
lint.ignore = [
  "E741",
  "E402",
  "C408",
  "ISC003",
  "B027",
  "B024",
  "NPY002",  # new numpy random syntax is worse
  "UP038",   # (x, y) -> x|y for isinstance
]
lint.flake8-implicit-str-concat.allow-multiline = false
line-length = 160

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
